<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AccountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.AccountFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOut_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_out"
        android:textColor="@color/outline_button_purple"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/outline_button_ripple"
        app:strokeColor="@color/outline_button_purple"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/account_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/account_information"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerInside"
        android:src="@drawable/ranking_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_info_title" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/email_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/main_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/user_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/user_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/user_name"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/userName_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userName_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:textColor="@color/main_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/user_name" />

    <Button
        android:id="@+id/edit_info_button"
        android:layout_width="120sp"
        android:layout_height="55sp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/edit_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changePw_button"
        android:layout_width="120sp"
        android:layout_height="55sp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_info_button" />

</androidx.constraintlayout.widget.ConstraintLayout>