<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.MainPageFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/quiz_button"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:text="@string/quiz"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ranking_button"
            android:layout_width="175dp"
            android:layout_height="60dp"
            android:text="@string/ranking"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/accountButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/account"
        android:scaleType="centerInside"
        android:src="@drawable/account_image_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/setting_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/setting"
        android:scaleType="centerInside"
        android:src="@drawable/setting_image_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>