<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offline_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_activity.OfflineLoginFragment">

    <TextView
        android:id="@+id/Welcome_To_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/welcome_to"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Comp4521_Quiz_App_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp4521_quiz_app"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_To_title" />

    <TextView
        android:id="@+id/user_name_stored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textColor="@color/main_purple"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/input_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/user_name" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password_layout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/input_text_hint"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="177dp"
            tools:layout_editor_absoluteY="374dp">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signOut_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_out"
        android:textColor="@color/outline_button_purple"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/outline_button_ripple"
        app:strokeColor="@color/outline_button_purple"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgetPw_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/forget_password"
        android:textColor="@color/outline_button_purple"
        android:textSize="12sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/outline_button_ripple"
        app:strokeColor="@color/outline_button_purple"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>